cmake_minimum_required(VERSION 3.19)
project(compititiveProgramming)

set(CMAKE_CXX_STANDARD 14)

add_executable(compititiveProgramming main.cpp solveMeFirst.cpp simpleArraySum.cpp compareTheTriplets.cpp veryBigSum.cpp diagonalDiffrence.cpp plusMinus.cpp Staircase.cpp miniMaxSum.cpp birthdayCakeCandles.cpp timeConeversion.cpp kangaroo.cpp sockMerchent.cpp drawingBook.cpp electronicShop.cpp correctnessInvariant.cpp)